--- a/BlobStorageProject/Views/Home/Index.cshtml
+++ b/BlobStorageProject/Views/Home/Index.cshtml
@@ -1,8 +1,12 @@
-﻿@{
-    ViewData["Title"] = "Home Page";
-}
+﻿@model List<string>
 
-<div class="text-center">
-    <h1 class="display-4">Welcome</h1>
-    <p>Learn about <a href="https://docs.microsoft.com/aspnet/core">building Web apps with ASP.NET Core</a>.</p>
-</div>
+    <div class="p-4">
+
+        <h4 class="text-dark">Blob Storage Hierarchy</h4>
+
+        @foreach(var item in Model)
+        {
+            <p>@item</p>
+        }
+
+    </div>
