--- a/BlobStorageProject/Views/Blob/AddFile.cshtml
+++ b/BlobStorageProject/Views/Blob/AddFile.cshtml
@@ -1,20 +1,35 @@
-﻿<form method="post" asp-action="AddFile" asp-controller="Blob" enctype="multipart/form-data">
-    <div class="container">
+﻿@model Blob
 
-        <div>
-            <h3> Container: @Context.Request.Query["containerName"].ToString()</h3>
+<form method="post" asp-action="AddFile" asp-controller="Blob" enctype="multipart/form-data">
+    <div class="container mt-4">
+
+        <div class="text-center">
+            <h3>Container: @Context.Request.Query["containerName"].ToString()</h3>
         </div>
 
         <input hidden name="containerName" value=@Context.Request.Query["containerName"].ToString() />
 
-        <div class="row border p-2">
-            <div class="col-12 pb-2"><h4>Add Item to Blob :</h4></div>
-
-
-            <div class="form-group col-9">
-                <input type="file" class="form-control pt-1" name="file" />
+        <div class="row border p-4">
+            <div class="col-12 mb-3">
+                <h4>Add Item to Blob :</h4>
             </div>
-            <div class="form-group col-3">
+
+            <div class="col-md-6 mb-3">
+                <label for="Title" class="form-label">Title:</label>
+                <input asp-for="Title" class="form-control" />
+            </div>
+
+            <div class="col-md-6 mb-3">
+                <label for="Comment" class="form-label">Comment:</label>
+                <input asp-for="Comment" class="form-control" />
+            </div>
+
+            <div class="col-md-6 mb-3">
+                <label for="file" class="form-label">Upload Blob:</label>
+                <input type="file" class="form-control" name="file" />
+            </div>
+
+            <div class="col-md-6 mb-3">
                 <button type="submit" class="btn btn-success form-control">Add</button>
             </div>
         </div>
