--- a/BlobStorageProject/Views/Blob/Index.cshtml
+++ b/BlobStorageProject/Views/Blob/Index.cshtml
@@ -1,27 +1,22 @@
 ﻿@model List<string>
 
-
 <div class="container p-4 border">
     <div class="row">
-        <div class="col-6">
-            <h3> Container: @Context.Request.Query["containerName"].ToString()</h3>
+        <div class="col-9">
+            <h3>Container: @Context.Request.Query["containerName"].ToString()</h3>
         </div>
-        <div class="col-2 text-right">
+        <div class="col-3 text-right">
             <a asp-action="AddFile" asp-controller="Blob" asp-route-containerName="@Context.Request.Query["containerName"]" class="btn btn-success">Add Blob</a>
+            <a asp-action="Index" asp-controller="Container" class="btn btn-info">Containers</a>
         </div>
-
-        <div class="col-2 text-right">
-            <a asp-action="Index" asp-controller="Container" class="btn btn-info">Back To Containers</a>
-        </div>
-
     </div>
-    <div class="container pt-4">
 
+    <div class="container pt-4">
         <table class="table table-bordered">
-            <thead>
+            <thead class="thead-dark">
                 <tr>
-                    <td>Image Name</td>
-                    <td>Delete</td>
+                    <th scope="col">Image Name</th>
+                    <th scope="col">Actions</th>
                 </tr>
             </thead>
             <tbody>
@@ -33,14 +28,12 @@
                                 @item
                             </a>
                         </td>
-                        <td>
-                            <a asp-action="DeleteFile" asp-controller="Blob" asp-route-name="@item" asp-route-containerName="@Context.Request.Query["containerName"]" class="btn btn-lg btn-danger"></a>
+                        <td class="text-right">
+                            <a asp-action="DeleteFile" asp-controller="Blob" asp-route-name="@item" asp-route-containerName="@Context.Request.Query["containerName"]" class="btn btn-danger btn-sm">Delete</a>
                         </td>
                     </tr>
                 }
             </tbody>
-
         </table>
-        
     </div>
 </div>
